randomized answer options for each question

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       </div>
       <!--NEW QUESTION FORM-->
       <form class="new-question my-3">
-        <p>Please select your one:</p>
+        <p class="d-none">Please Select One:</p>
         <div class="input-group choices">
           <!-- <div class="input-group-prepend">
             <div class="input-group-text">Question:</div>
           </div> -->
           <!-- <input type="radio" id="message" class="form-control" required /> -->
           <div class="input-group-append">
-            <input type="submit" class="submit-ans btn" value="submit"/>
+            <input type="submit" class="submit-ans btn d-none" value="submit"/>
           </div>
         </div>
       </form>
