--- a/index.html
+++ b/index.html
@@ -22,21 +22,19 @@
       <form class="new-question my-3">
         <p class="d-none">Please Select One:</p>
         <div class="input-group choices">
-          <!-- <div class="input-group-prepend">
-            <div class="input-group-text">Question:</div>
-          </div> -->
-          <!-- <input type="radio" id="message" class="form-control" required /> -->
           <div class="input-group-append">
-            <input type="submit" class="submit-ans btn d-none" value="submit"/>
+            <input type="submit" class="btn submit-ans d-none" value="submit"/>
           </div>
         </div>
       </form>
       <div>
         <button class="btn start">Start</button>
       </div>
-      <script src="Questions.js"></script>
-      <script src="Quiz.js"></script>
-      <script src="app.js"></script>
+      <div class="score">Your Score: </div>
     </div>
+
+    <script src="Questions.js"></script>
+    <script src="Quiz.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
