added http-server, git ignore

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <!--NEW QUESTION FORM-->
       <form class="new-question my-3">
-        <p class="d-none">Please Select One:</p>
+        <p class="d-none">Please select one:</p>
         <div class="input-group choices">
           <div class="input-group-append">
             <input type="submit" class="btn submit-ans d-none" value="submit"/>
@@ -28,9 +28,9 @@
         </div>
       </form>
       <div>
-        <button class="btn start">Start</button>
+        <button class="btn start">Start Quiz</button>
       </div>
-      <div class="score">Your Score: </div>
+      <div class="score d-none">Your Score: 0</div>
     </div>
 
     <script src="Questions.js"></script>
