added logic, alter display depending on score

--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
         </div>
       </form>
       <div>
-        <button class="btn start">Start Quiz</button>
+        <button class="btn start">Start Tandem Quiz</button>
       </div>
       <div class="score d-none">Your Score: 0</div>
     </div>
-
-    <script src="Questions.js"></script>
     <script src="Quiz.js"></script>
     <script src="app.js"></script>
   </body>
