added play again button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <button class="btn start">Start Tandem Quiz</button>
       </div>
       <div class="score d-none">Your Score: 0</div>
+      <div>
+        <button class="btn play-again d-none">Play Again</button>
+      </div>
     </div>
     <script src="Quiz.js"></script>
     <script src="app.js"></script>
