added styling and dried up code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Tandem Quiz</title>
   </head>
   <body>
-    <div class="container my-4">
+    <div class="container">
       <!--Question LIST / WINDOW-->
       <div class="question-window">
         <ul class="question-list list-group"></ul>
@@ -22,15 +22,15 @@
       <form class="new-question my-3">
         <p class="d-none">Please select one:</p>
         <div class="input-group choices">
-          <div class="input-group-append">
-            <input type="submit" class="btn submit-ans d-none" value="submit"/>
-          </div>
         </div>
       </form>
+              <div class="input-group-append">
+                <input type="submit" class="btn submit-ans d-none" value="submit"/>
+              </div>
       <div>
         <button class="btn start">Start Tandem Quiz</button>
       </div>
-      <div class="score d-none">Your Score: 0</div>
+      <div class="score d-none h4">Correct Answers: 0</div>
       <div>
         <button class="btn play-again d-none">Play Again</button>
       </div>
