styling and readme updates

--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
       <!--NEW QUESTION FORM-->
       <form class="new-question my-3">
         <p class="d-none">Please select one:</p>
-        <div class="input-group choices">
-        </div>
+        <div class="input-group choices"></div>
       </form>
-              <div class="input-group-append">
-                <input type="submit" class="btn submit-ans d-none" value="submit"/>
-              </div>
+      <div class="input-group-append">
+        <input type="submit" class="btn submit-ans d-none" value="submit" />
+      </div>
       <div>
         <button class="btn start">Start Tandem Quiz</button>
       </div>
@@ -35,7 +34,9 @@
         <button class="btn play-again d-none">Play Again</button>
       </div>
     </div>
-    <script src="Quiz.js"></script>
-    <script src="app.js"></script>
+    <script src="/Quiz.js"></script>
+    <script src="/app.js"></script>
+    <!-- <script src="/Quiz.js"></script> -->
+    <script type="module" src="/Quiz.spec.js"></script>
   </body>
 </html>
