added separate score and correct asnwer elements

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <div>
         <button class="btn start">Start Tandem Quiz</button>
       </div>
-      <div class="score d-none h4">Correct Answers: 0</div>
-      <div>
-        <button class="btn play-again d-none">Play Again</button>
-      </div>
+      <div class="final-score d-none h1">You Scored:</div>
+      <div class="corr-ans d-none h4">Correct Answer:</div>
+      <div><button class="btn play-again d-none">Play Again</button></div>
     </div>
+
     <script src="/Quiz.js"></script>
     <script src="/app.js"></script>
     <!-- <script src="/Quiz.js"></script> -->
