--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!--NEW QUESTION FORM-->
       <form class="new-question my-3">
         <p class="d-none">Please select one:</p>
-        <div class="input-group choices"></div>
+        <div class="choices"></div>
       </form>
       <div class="input-group-append">
         <input type="submit" class="btn submit-ans d-none" value="submit" />
